--- a/registration.css
+++ b/registration.css
@@ -1,75 +1,76 @@
 @import url('https://fonts.googleapis.com/css2?family=Overlock+SC&display=swap');
-*{
+
+* {
     font-weight: bold;
-    font-family: url('https://fonts.googleapis.com/css2?family=Overlock+SC&display=swap');
-    /* background-color:darkolivegreen ; */
-}
-.start{
-    margin: 5vw;
-    padding: 5vw;
-    justify-content: safe;
-    color:black;
-    background-color:bisque;
-    border-radius: 5vw;
-}
-textarea{
-    height: 2vh;
-  padding-right: 10vw;
-  justify-content: center;
-  border-left-style: solid;
-  border-left-width: 0.2vw;
-  margin-top: 0.1vh;
-}
-.name, .mail{
-    padding-right: 2vw;
-}
-.name{
-    padding-top: 2vh;
-}
-.button{
-    margin-left: 60vw;
-  color:rgb(255, 208, 0);
-  background-color:rgb(7, 11, 242); 
-}
-.pad{
-    padding-bottom: 2vh;
-}
-.bgc{
-    background-color: rgb(235, 185, 168);
-   border-radius: 2vw; 
-   /* border-radius: 20vh; */
-}
-.name, .Address, .sex, .mail, .form, .form2{
-    
-    /* text-align: center; */
-    display: flex;
-     justify-content: center; 
-}     
-.sex{
-    padding-right: 20vw;
-    padding-left:5vw
-}
- .form{
-     padding-left: 15vw;
-
-    big{
-        padding-right: 10vw;
-    }
-    padding-right: 15vw;
-}
-.form2{
-    padding-right: 20vw;
-    padding-left: 5vw;
-    big{
-        padding-right: 60px;
-    }
+    font-family: 'Overlock SC', cursive;
 }
 
-body{
+body {
     margin: 1vw;
     padding-top: 0;
-   
-}
-body{
     background-color: darkolivegreen;
+}
+
+.start {
+    margin: 5vw;
+    padding: 5vw;
+    color: black;
+    background-color: bisque;
+    border-radius: 5vw;
+}
+
+textarea {
+    height: 2vh;
+    padding-right: 10vw;
+    justify-content: center;
+    border-left-style: solid;
+    border-left-width: 0.2vw;
+    margin-top: 0.1vh;
+}
+
+.name, .mail, .Address, .sex, .form, .form2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2vw;
+}
+
+.button {
+    color: rgb(255, 208, 0);
+    background-color: rgb(7, 11, 242); 
+}
+
+.bgc {
+    background-color: rgb(235, 185, 168);
+    border-radius: 2vw;
+    padding: 2vw;
+}
+
+@media (min-width: 600px) {
+    .name, .mail, .Address, .sex, .form, .form2 {
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .start {
+        margin: 2vw;
+        padding: 2vw;
+    }
+
+    .bgc {
+        padding: 4vw;
+    }
+
+    .button {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    textarea {
+        width: 100%;
+        max-width: 400px;
+    }
+}
+.button{
+    float: right;
 }
